--- a/Readme
+++ b/Readme
@@ -5,6 +5,5 @@
  
  COMO INSTALAR E EXECUTAR O PROJETO:
  
- Para instalar as dependencias do projeto, é necessario rodar o comando "npm install" e abrir o arquivo HTML que ira conseguir ter acesso
- ao projeto.
+ Para instalar as dependencias do projeto, é necessario rodar o comando "npm install" e abrir o arquivo HTML que ira conseguir ter acesso ao projeto.
  
